--- a/Ansiblefile.yml
+++ b/Ansiblefile.yml
@@ -1,3 +1,9 @@
+- src: https://github.com/kostyrev/ansible-unarchive-deps
+  name: andrewrothstein.unarchive-deps
+
+- src: https://github.com/kostyrev/ansible-bash
+  name: andrewrothstein.bash
+
 - src: https://github.com/kostyrev/ansible-anaconda
   name: andrewrothstein.anaconda
 
