--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
 
 before_install:
 - sudo apt-get -qq update
-- sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
+- sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker.io
 
 install:
 - pip install -r requirements.txt
