--- a/packages-conda-pip.yml
+++ b/packages-conda-pip.yml
@@ -9,6 +9,7 @@
       with_items:
         - tensorflow
         - keras
+        - urllib3
       environment:
         ANACONDA_DIR: /usr/local/anaconda
         PATH: "${ANACONDA_DIR}/bin:${PATH}"
