--- a/packages-conda-pip.yml
+++ b/packages-conda-pip.yml
@@ -10,6 +10,7 @@
         - tensorflow
         - keras
         - urllib3
+        - shapely
       environment:
         ANACONDA_DIR: /usr/local/anaconda
         PATH: "${ANACONDA_DIR}/bin:${PATH}"
