Install libspatialindex-dev from OS packages and rtree from pip

--- a/packages-conda-pip.yml
+++ b/packages-conda-pip.yml
@@ -11,6 +11,7 @@
         - keras
         - urllib3
         - shapely
+        - rtree
       environment:
         ANACONDA_DIR: /usr/local/anaconda
         PATH: "${ANACONDA_DIR}/bin:${PATH}"
