Explicitly specify availability_zone

--- a/.envrc.dist
+++ b/.envrc.dist
@@ -7,5 +7,7 @@ export TF_VAR_spot_price=0.14
 # AWS region to create instances in
 export TF_VAR_region=us-east-2
 
+export TF_VAR_availability_zone=${TF_VAR_region}b
+
 # The name of ssh key pair
 export TF_VAR_key_name=$(echo $USER)
