--- a/packages-conda-pip.yml
+++ b/packages-conda-pip.yml
@@ -12,6 +12,7 @@
         - urllib3
         - shapely
         - rtree
+        - tqdm
       environment:
         ANACONDA_DIR: /usr/local/anaconda
         PATH: "${ANACONDA_DIR}/bin:${PATH}"
