--- a/packages-conda-pip.yml
+++ b/packages-conda-pip.yml
@@ -13,6 +13,7 @@
         - shapely
         - rtree
         - tqdm
+        - bhtsne
       environment:
         ANACONDA_DIR: /usr/local/anaconda
         PATH: "${ANACONDA_DIR}/bin:${PATH}"
