--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,6 +9,7 @@ lint:
 
 provisioner:
   name: ansible
+  log: True
   playbooks:
     converge: ../../playbook.yml
 
@@ -22,5 +23,4 @@ scenario:
 
 platforms:
   - name: ubuntu
-    image: ubuntu
-    image_version: 16.04
+    image: ubuntu:16.04
